Updates to product template per client feedback

--- a/sass/grid/_grid.scss
+++ b/sass/grid/_grid.scss
@@ -5,6 +5,30 @@
 	width: $base-width;
 	margin: 0 auto;
 	padding: 0;
+	&.neues{
+		max-width:1200px;
+		@media only screen and (max-width:1465px){
+			&.product{
+				margin:0 auto 0 140px;
+				max-width:calc(90% - 125px);
+			}
+		}
+		@media only screen and (max-width:1201px){
+			width:95%;
+			&.product{
+				margin:0 auto 0 140px;
+				width:95%
+			}
+		}
+		@media only screen and (max-width:480px){
+			margin:0 auto;
+			max-width:95%;
+			&.product{
+				margin:0 auto;
+				max-width:95%;
+			}
+		}
+	}
 	.column,
 	.columns {
 		float: left;
