--- a/sass/modules/_modules.scss
+++ b/sass/modules/_modules.scss
@@ -839,7 +839,7 @@ main.seventeen-tth{
 		.banner-subheader{
 			h2{
 				font-size:16px;
-				font-family: "Avenir Next Cyr W00 Heavy";
+				font-family: "Avenir Next Cyr W00 Bold";
 				line-height:1.5;
 				text-transform:uppercase;
 				letter-spacing:.04em;
@@ -850,7 +850,7 @@ main.seventeen-tth{
 		.banner-callout{
 			h3{
 				font-size:16px;
-				font-family: "Avenir Next Cyr W00 Heavy";
+				font-family: "Avenir Next Cyr W00 Bold";
 				line-height:1.5;
 				letter-spacing:.04em;
 				a{
@@ -880,6 +880,10 @@ main.seventeen-tth{
 				margin-right:10px;
 				white-space:nowrap;
 
+				.cta-link{
+					font-family: "Avenir Next Cyr W00 Bold";
+				}
+
 				&:nth-of-type(1) a{
 					color:$new-blue;
 				}
@@ -905,7 +909,7 @@ main.seventeen-tth{
 			text-align:center;
 			h2{
 				//text-align:center;
-			    font-family: "Avenir Next Cyr W00 Heavy";
+			    font-family: "Avenir Next Cyr W00 Bold";
 			    line-height:1.5;
 			    padding-bottom:40px;
 			    font-size:18px;
@@ -1010,6 +1014,13 @@ main.seventeen-tth{
 
 			a{
 				color:$white;
+				&:hover,
+				&:focus,
+				&:active{
+					img,h3{
+					opacity:.7;
+					}
+				}
 			}
 			.button-wrap{
 				padding:5px;
@@ -1055,18 +1066,29 @@ main.seventeen-tth{
 		&.faq{
 
 			.faq-block{
-				margin:0 40px;
+				//margin:0 40px;
+				//margin:0 40px 0 0;
 				@media only screen and (max-width:$tablet-width){
 					margin:0 20px;
 				}
 			}
 			.question{
+				.row{
+					margin:0;
+				}
+
+				h2{
 					font-size:16px;
 					font-weight: normal;
-					font-family: "Avenir Next Cyr W00 Heavy";
+					font-family: "Avenir Next Cyr W00 Bold";
 					margin-bottom:.5em;
 					line-height:1.25;
-					text-transform:uppercase;
+					//text-transform:uppercase;
+					width:90%; float:left; display:inline-block;
+				}
+					span{
+						float:left; display:inline-block;
+					}
 					i{
 						color:$new-red;
 					}
@@ -1075,7 +1097,7 @@ main.seventeen-tth{
 				.answer{
 					font-size:16px;
 					font-weight: normal;
-					font-family: "Avenir Next Cyr W00 regular";
+					font-family: "Avenir Next Cyr W00 Regular";
 					margin-bottom:1em;
 					line-height:1.25;
 					display:none;
@@ -1093,6 +1115,10 @@ main.seventeen-tth{
 					    @media only screen and (max-width: 1001px){
 				    	    padding: 20px 20px 20px 0;
 					    }
+					    @media only screen and (max-width:500px){
+					    	text-align:center;
+					    	padding:20px;
+					    }
 					.icon{
 						text-align:center;
 						width:70%;
@@ -1103,10 +1129,11 @@ main.seventeen-tth{
 					    }
 					     @media only screen and (max-width:500px){
 					    	width:100%;
+					    	margin:0 auto;
 					    }
 					}
 					.listing-title{
-						font-family: "Avenir Next Cyr W00 Heavy";
+						font-family: "Avenir Next Cyr W00 Bold";
 					    line-height:1.5;
 					    font-size:16px;
 					    text-transform:uppercase;
@@ -1115,6 +1142,9 @@ main.seventeen-tth{
 					     @media only screen and (max-width:$tablet-width){
 			    			width:80%;
 			    		}
+			    		 @media only screen and (max-width:500px){
+					    	width:100%;
+					    }
 					}
 				}
 			}
@@ -1202,7 +1232,7 @@ main.seventeen-tth{
 		padding:10px;
 		.cta-link{
 			text-transform:uppercase;
-			font-family: "Avenir Next Cyr W00 Heavy";
+			font-family: "Avenir Next Cyr W00 Bold";
 		    line-height:1.5;
 		    font-size:12px;
 
@@ -1250,6 +1280,11 @@ main.seventeen-tth{
     position: fixed;
     outline: none !important;
     -webkit-backface-visibility: hidden;
+    &.has_form{
+    	.lightbox-content,.content{
+    		width:auto;
+    	}
+    }
     .lightbox-container{
     	text-align: center;
 	    position: absolute;
@@ -1270,35 +1305,15 @@ main.seventeen-tth{
 	    }
     }
 	.lightbox-content, .content{
-		//display:table-cell;
-		// width:100%;
-		 max-width:960px;
-		// //width:100%;
-		// vertical-align: middle;
-		// position: relative;
-  //   display: inline-block;
-  //   vertical-align: middle;
-  //   margin: 0 auto;
-  //   text-align: left;
-  //   z-index: 1045;
-    //---------------
-    // text-align: center;
-    // position: absolute;
-    width: 100%;
-    // height: 100%;
-    // left: 0;
-    // top: 0;
-    // padding: 0 8px;
-    // -webkit-box-sizing: border-box;
-    // -moz-box-sizing: border-box;
-    // box-sizing: border-box;
+		max-width:960px;
+    	width: 100%;
         position: relative;
-    display: inline-block;
-    vertical-align: middle;
-    margin: 0 auto;
-    text-align: left;
-    z-index: 1045;
-    line-height: 0;
+	    display: inline-block;
+	    vertical-align: middle;
+	    margin: 0 auto;
+	    text-align: left;
+	    z-index: 1045;
+	    line-height: 0;
 
     .iframe-close{
     	position:absolute;
@@ -1332,13 +1347,13 @@ main.seventeen-tth{
     }
 
     .iframe_scaler_text{
-    	width:100%;
-    	background:white;
+    	//width:100%;
+    	//background:white;
     	//overflow:hidden;
 
     	.iframe-close{
-    		// top:11px
-    		top:-16px;
+    		top:10px;
+    		//top:-16px;
     	}
     }
     
